fixing navbar mobile on safari 5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,7 @@ h6 {
 }
 
 .navbar-mobile {
-  position: fixed;
+  position: relative;
   overflow: hidden;
   top: 0;
   right: 0;
